# dell-unisphere-package

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml  test.yml
data/: system_state.json
docs/: Architecture.md  Authentication.md  Backlog.md  DellUnisphereRestAPI.md  ExampleCookie.md  FastAPI.md  ImplementationPlan.md  Prompts.md  Requirements.md  SprintPlan.md  TestStrategy.md  UpgradeSession.md  UseCases.md  candidateSoftwareVersion.md  dell-unisphere-mock-package.md  example_response.md  loginSessionInfo.md  real_API_interaction_record.md  system.md  system_information.md  upload_file.md
examples/: upgrade_monitor.py
src/dell_unisphere_package/: __main__.py  main.py  version.py
src/dell_unisphere_package/controllers/: __init__.py  auth.py
src/dell_unisphere_package/middleware/: __init__.py  csrf.py  headers.py  reboot_simulator.py
src/dell_unisphere_package/models/: __init__.py  storage.py
src/dell_unisphere_package/utils/: db.py  (+3 more)
test_results/: test_report.md
tests/: conftest.py  test_api.sh  test_header_validation.sh
tests/e2e/: test_auth_workflow.py  test_upgrade_flow.py
tests/integration/: test_auth_routes.py  test_eligibility_modes.py  test_software_routes.py  test_system_routes.py  test_upgrade_endpoints.py
tests/scripts/: test_api.sh  test_api.sh.bak  test_api.sh.original  test_eligibility_modes.sh  test_header_validation.sh  test_upgrade_flow.sh  test_version_history.sh
tests/unit/: test_upgrade_simulator.py
tools/: view_db.py
(+15 files in other folders)
