[project]
name = "dell-unisphere-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lyuboslav Petrov", email = "petrov.lyuboslav@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[project.scripts]
dell-unisphere-package = "dell_unisphere_package:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
